Version 1.11.1+svn:
 * AI:
   * Experimental Multiplayer AI
     * Improve recruitment, notably first turn choices and units with poison
       and charge
     * Improved selection of units for village stealing
     * Remove dependency on AI-demos add-on
     * Fix bug when playing on maps with a turn limit
     * Fix bug handling regeneration
     * Minor improvements in switching between castles
   * New [micro_ai] tag, 18 different Micro AIs, and 14 test scenarios
     * This includes AIs for 7 different animal behaviors, bottleneck defense,
       2 different guardians and a coward, healer support, lurkers,
       messenger escort, patrol, protect and move a unit, and 2 alternative
       recruiting strategies.
     * Documentation at http://wiki.wesnoth.org/Micro_AIs
 * Campaigns:
   * Son of the Black Eye:
     * Prevent infinite loop if fewer than two transport ships (bug #20389)
 * Graphics:
   * Fix layering error with bridges
 * Language and i18n:
   * Updated translations: Galician, Italian, Portuguese, Portuguese (Brazil)
 * User interface:
   * Allow copying the selection in the old (default) lobby using
     Ctrl+C/Command+C (bug #5877)
 * WML engine:
   * [unit_overlay] and [remove_unit_overlay] now return a more meaningful
     error message if the image= key is missing
   * When not replacing values, [effect] apply_to=defense will now modify
     absolute values instead of signed values (bug #20242). This allows for
     cleaner WML when the unit type is not necessarily known in advance.
   * Split the 'not_living' unit status into 'unpoisonable', 'undrainable' and
     'unplagueable'. 'not_living' now acts on the whole group
 * Miscellaneous and bug fixes:
   * The undo stack is preserved across a save-reload.
   * Removed several unused private member variables.
   * Fixed the present in-game command line autocompletion feature so it
     actually works at all
   * Removed recognition of the --smallgui command line option, which has been