@@ -223,19 +223,49 @@
 
 							[column]
 
+								horizontal_grow = "true"
+
 								[grid]
 
 									[row]
 
 										[column]
-											border = "all"
-											border_size = 5
-											horizontal_alignment = "left"
 
-											[label]
-												definition = "default"
-												label = _ "Add-on types:"
-											[/label]
+											horizontal_grow = "true"
+
+											[grid]
+
+												[row]
+
+													[column]
+														border = "all"
+														border_size = 5
+														horizontal_alignment = "left"
+														vertical_alignment = "top"
+
+														[label]
+															definition = "default"
+															label = _ "Add-on types:"
+														[/label]
+
+													[/column]
+
+													[column]
+														border = "all"
+														border_size = 5
+														horizontal_alignment = "right"
+
+														[button]
+															id = "toggle_all_displayed_types"
+															definition = "default"
+															label = _ "Toggle All"
+														[/button]
+
+													[/column]
+
+												[/row]
+
+											[/grid]
 
 										[/column]
 
