@@ -3,6 +3,10 @@ changes may be omitted). For a complete list of changes, see the main
 changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 
 Version 1.11.1+svn:
+ * Add-ons client:
+   * Add a button to the Filter Options dialog to toggle all currently
+     displayed add-on categories at once.
+
  * AI:
    * Experimental Multiplayer AI
      * Improve recruitment, notably first turn choices and units with poison.
