@@ -17,6 +17,8 @@
 
 #include "gui/dialogs/addon/filter_options.hpp"
 
+#include "gui/dialogs/field.hpp"
+#include "gui/widgets/button.hpp"
 #ifdef GUI2_EXPERIMENTAL_LISTBOX
 	#include "gui/widgets/list.hpp"
 #else
@@ -25,6 +27,15 @@
 #include "gui/widgets/settings.hpp"
 #include "gui/widgets/window.hpp"
 #include "gettext.hpp"
+
+#include <boost/bind.hpp>
+
+namespace {
+	bool unchecked_bool_field_finder(gui2::twindow& window, gui2::tfield_bool* bool_field)
+	{
+		return bool_field->get_widget_value(window) == false;
+	}
+}
 
 namespace gui2 {
 
@@ -47,23 +58,29 @@ REGISTER_DIALOG(addon_filter_options)
 taddon_filter_options::taddon_filter_options()
 	: displayed_status_()
 	, displayed_types_()
+	, displayed_types_fields_()
 {
 	displayed_types_.assign(true);
 
 	// This part has to be hardcoded, sadly.
 
-	register_bool("show_unknown", true, displayed_types_[ADDON_UNKNOWN]);
-	register_bool("show_sp_campaigns", true, displayed_types_[ADDON_SP_CAMPAIGN]);
-	register_bool("show_sp_scenarios", true, displayed_types_[ADDON_SP_SCENARIO]);
-	register_bool("show_mp_campaigns", true, displayed_types_[ADDON_MP_CAMPAIGN]);
-	register_bool("show_mp_scenarios", true, displayed_types_[ADDON_MP_SCENARIO]);
-	register_bool("show_mp_maps", true, displayed_types_[ADDON_MP_MAPS]);
-	register_bool("show_mp_eras", true, displayed_types_[ADDON_MP_ERA]);
-	register_bool("show_mp_factions", true, displayed_types_[ADDON_MP_FACTION]);
-	register_bool("show_mp_mods", true, displayed_types_[ADDON_MP_MOD]);
-	register_bool("show_media", true, displayed_types_[ADDON_MEDIA]);
+	register_displayed_type_field("show_unknown", ADDON_UNKNOWN);
+	register_displayed_type_field("show_sp_campaigns", ADDON_SP_CAMPAIGN);
+	register_displayed_type_field("show_sp_scenarios", ADDON_SP_SCENARIO);
+	register_displayed_type_field("show_mp_campaigns", ADDON_MP_CAMPAIGN);
+	register_displayed_type_field("show_mp_scenarios", ADDON_MP_SCENARIO);
+	register_displayed_type_field("show_mp_maps", ADDON_MP_MAPS);
+	register_displayed_type_field("show_mp_eras", ADDON_MP_ERA);
+	register_displayed_type_field("show_mp_factions", ADDON_MP_FACTION);
+	register_displayed_type_field("show_mp_mods", ADDON_MP_MOD);
+	register_displayed_type_field("show_media", ADDON_MEDIA);
 	// FIXME: (also in WML) should this and Unknown be a single option in the UI?
-	register_bool("show_other", true, displayed_types_[ADDON_OTHER]);
+	register_displayed_type_field("show_other", ADDON_OTHER);
+}
+
+void taddon_filter_options::register_displayed_type_field(const std::string& field_id, ADDON_TYPE addon_type)
+{
+	displayed_types_fields_.push_back(register_bool(field_id, true, displayed_types_[addon_type]));
 }
 
 void taddon_filter_options::read_types_vector(const std::vector<bool>& v)
@@ -71,6 +88,18 @@ void taddon_filter_options::read_types_vector(const std::vector<bool>& v)
 	for(size_t k = 0; k < displayed_types_.size(); ++k) {
 		// All unspecified types default to visible.
 		displayed_types_[k] = k < v.size() ? v[k] : true;
+	}
+}
+
+void taddon_filter_options::toggle_all_displayed_types_button_callback(twindow& window)
+{
+	const bool have_any_unchecked = displayed_types_fields_.end() == std::find_if(
+		displayed_types_fields_.begin(),
+		displayed_types_fields_.end(),
+		boost::bind(&unchecked_bool_field_finder, boost::ref(window), _1));
+
+	BOOST_FOREACH(tfield_bool* const field, displayed_types_fields_) {
+		field->set_widget_value(window, !have_any_unchecked);
 	}
 }
 
@@ -90,6 +119,10 @@ void taddon_filter_options::pre_show(CVideo& /*video*/, twindow& window)
 	}
 
 	list.select_row(displayed_status_);
+
+	connect_signal_mouse_left_click(
+		find_widget<tbutton>(&window, "toggle_all_displayed_types", false),
+		boost::bind(&taddon_filter_options::toggle_all_displayed_types_button_callback, this, boost::ref(window)));
 }
 
 void taddon_filter_options::post_show(twindow& window)
