@@ -1,4 +1,7 @@
 Version 1.11.1+svn:
+ * Add-ons client:
+   * Add a button to the Filter Options dialog to toggle all currently
+     displayed add-on categories at once
  * AI:
    * Experimental Multiplayer AI
      * Improve recruitment, notably first turn choices and units with poison
